# eosio.token

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  docs.json  pipeline.jsonc
contracts/: CMakeLists.txt
docker/: buildContracts.sh  unit-test.sh  verifyInstallation.sh
docs/: 01_build-and-deploy.md  03_build-and-deploy.md  03_token_standard_proposal.md  index.md
docs/02_guides/: 01_how-to-create-issue-and-transfer-a-token.md
tests/: contracts.hpp.in  eosio.token_tests.cpp  main.cpp
